Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjIntObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        Integer var
        var:SetValue(5)
        return var
    end
end